provarAnt/00D190000000ZY2EAM/objects/Inventory_Make_and_Market__c.object
<CustomObject>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Make and Market</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Make and Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Make and Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>